--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <script type="text/javascript" src="//code.jquery.com/jquery-1.4.2.min.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
     <script type="text/javascript" charset="utf-8">
-        $(document).ready(function() {.
+        $(document).ready(function() {
             namespace = '/test';
 
             //     http[s]://<domain>:<port>[/<namespace>]
