--- a/templates/login.html
+++ b/templates/login.html
@@ -1,17 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <title>Login to chat</title>
+    <title>Log in</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ url_for("static", filename='hack.css') }}">
+    <script type="text/javascript" src="{{ url_for("static", filename='vue.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for("static", filename='axios.min.js') }}"></script>
 </head>
-<body>
-<h1>sjfhksjbdfakdnb</h1>
-<form id="login_form" method="post" action="/login-verify">
-    <input type="text" name="login" id="login" placeholder="login">
-    <input type="text" name="email" id="email" placeholder="e-mail">
-    <input type="submit" value="log in">
 
-</form>
+<body class="hack dark-grey">
 
+    <div class="container justify-content-center">
+        <p></p>
+        <form class="form justify-content-center" method="POST" action='/verify-login'>
+          <fieldset class="form-group">
+            <label for="usename">USERNAME:</label>
+            <input type="text" name='username' class="form-control">
+          </fieldset>
+          <fieldset class="form-group">
+            <label for="password">PASSWORD:</label>
+            <input type="password" name='password' class="form-control">
+          </fieldset>
+          <div class="form-actions">
+            <button type="submit" action='submit' class="btn btn-primary btn-block">Submit</button>
+          </div>
+        </form>
+
+    </div>
 </body>
+
 </html>
