--- a/templates/app.html
+++ b/templates/app.html
@@ -10,8 +10,8 @@
     <script type="text/javascript" src="{{ url_for("static", filename='axios.min.js') }}"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
 </head>
-{% raw %}
 <body class="hack dark-grey">
+{% raw %}
 
     <div class="container" id="chatApp">
         <div class="grid">
@@ -27,6 +27,13 @@
                         {{message.author}} - {{message.text}}
                     </div>
 
+                <div style="position:absolute;bottom:0;">
+                    <fieldset class="form-group">
+                        <label for="message">message:</label>
+                        <input id="message" type="text" class="form-control" v-model="currentMessage" v-on:keyup.enter="sendMessage">
+                      </fieldset>
+                </div>
+
             </div>
 
             <div class="cell -3of12">
@@ -36,93 +43,7 @@
         </div>
         
     </div>
-
-    <script>
-        var usersApp = new Vue({
-            el: '#chatApp',
-            data: {
-                userData: {
-                    login: '',
-                    token: '',
-                    ID: ''
-
-                },
-                groups: [
-                    {
-                        id: 1337,
-                        title: 'Konwersacja',
-                        messages: [
-                            {
-                                id: 1, 
-                                author: 'baczek',
-                                text: 'jadłem wczoraj prażynki'
-                            },
-                            {
-                                id: 2,
-                                author: 'prażynka',
-                                text: 'nieeeeee'
-                            }
-                        ]
-                    },
-                    {
-                        id: 2,
-                        title: 'Konwersacja 2',
-                        messages: [
-                            {
-                                id: 1, 
-                                author: 'Hideo Kojima',
-                                text: 'jutro premiera death stranding'
-                            },
-                            {
-                                id: 2,
-                                author: 'totalnieNieBaczek',
-                                text: 'Gdzie jest moje ps4'
-                            }
-                        ]
-                    }
-                ],
-
-                activeGroup: null,
-                socket: null
-            },
-            
-            methods: {
-                selectGroup: function (group) {
-                    this.activeGroup = group
-                },
-                createGroup: function () {
-                    let groupName = prompt('Podaj nazwę grupy')
-                },
-                initSocket() {
-                    let SELF = this
-                    namespace = '/chat'
-
-                    SELF.socket = io.connect(location.protocol + '//' + document.domain + ':' + location.port + namespace)
-
-                    SELF.socket.on('connect', function() {
-                        console.log('connected')
-                        SELF.socket.emit('auth', {token: SELF.userData.token, ID: SELF.userData.ID});
-                        
-                    });
-
-                    SELF.socket.on('auth_success', function(messages) {
-                        console.log('messages:')
-                        console.log(messages);
-                    });
-                }
-                
-            },
-
-            created: function () {
-                this.activeGroup = this.groups[0]
-                this.userData.token = localStorage.getItem('token')
-                this.userData.login = localStorage.getItem('login')
-                this.userData.ID = localStorage.getItem('ID')
-
-                this.initSocket()
-            }
-        })
-    </script>
+{% endraw %}
+<script type="text/javascript" src="{{ url_for("static", filename='app.js') }}"></script>
 
 </body>
-{% endraw %}
